--- a/server/app/requirements.txt
+++ b/server/app/requirements.txt
@@ -1,10 +1,10 @@
 # Core dependencies
-fastapi>=0.68.0
+fastapi
 uvicorn[standard]
 asyncpg
 bcrypt
-python-dotenv>=0.19.0
-supabase>=1.0.0
+python-dotenv
+supabase
 python-jose[cryptography]  # For JWT handling
 passlib[bcrypt]             # For password hashing (alternative to bcrypt)
 email-validator             # For validating email addresses
@@ -17,11 +17,4 @@ reportlab                   # For PDF generation
 
 # Testing
 pytest
-httpx[cli]
-
-# Additional dependencies
-celery>=5.2.3
-PyMuPDF>=1.19.0  # for PDF text extraction
-openai>=1.0.0    # for GPT-4 API
-pydantic>=2.0.0
-redis>=4.0.0     # for Celery broker 
+httpx[cli] 
